# test_robot_new

./: CMakeLists.txt  base_link.STL  display.launch.py  package.xml  test_robot.urdf
launch/: display.launch.py  display.launch.xml  sample.display.launch.xml  xacro.display.launch.py  xacro.display.launch.xml
test_robot_bringup/: CMakeLists.txt  package.xml
test_robot_bringup/launch/: sample_gazebo.launch.py  sample_gazebo.launch.xml  test_robot_gazebo.launch.py  test_robot_gazebo.launch.xml
urdf/: common_properties_test_robot_new.xacro  test_robot_mobile_base.xacro  test_robot_new.gazebo.xacro  test_robot_new.urdf  test_robot_new.urdf.xacro  test_robot_new_ros2_control.xacro
