<package format="2">
  <name>test_robot_new</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for test_robot_new.
    This package contains configuration data, 3D models, and launch files
    for the test_robot_new robot.
  </description>
  <author>aniket</author> 
  <maintainer email="aniketbhosale200@gmail.com">aniket</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

